test/sema/no-matching-constructor-generic.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

struct Foo<T>: Copyable {
    Foo() { }
    Foo(T a, T b) { }
}

void main() {
    // CHECK: [[@LINE+6]]:9: error: no matching constructor 'Foo(int)'
    // CHECK: 4:5: note: candidate function:
    // CHECK-NEXT: Foo() { }
    // CHECK: 5:5: note: candidate function:
    // CHECK-NEXT: Foo(T a, T b) { }
    // CHECK-NOT: note
    _ = Foo(42)
}
